@@ -94,6 +94,7 @@ New in v0.7.06 (2015/12/07)
 * Fixed bug #1260666 universally by splitting the filelist for
   delete before passing to backend.
 * Fixed bug #1369243 by adjusting messages to be more readable.
+* Fixed bug #1375019 with patch from Eric Bavier (home to tmp).
 
 
 New in v0.7.05 (2015/09/15)
